refactor: metrics for new Analyzer superclass structure